# e2schema

./: Cargo.toml
src/: lib.rs
src/domain/: analytics.rs  cart.rs  catalog.rs  inventory.rs  mod.rs  notification.rs  order.rs  payment.rs  shipping.rs  user.rs
src/events/: envelop.rs  mod.rs
