[package]
name = "e2schema"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
event-stream = { git = "https://github.com/Austin-rgb/event-stream" }

